fix table scrolling on mobile

--- a/blog/assets/styles/page.css
+++ b/blog/assets/styles/page.css
@@ -60,6 +60,10 @@ body {
     flex-grow: 1;
     order: -1;
   }
+
+  #content table {
+    display: block;
+  }
 }
 
 #content {
@@ -79,8 +83,8 @@ body {
 }
 
 #content table {
-  border: solid black;
   border-collapse: collapse;
+  overflow-x: scroll;
 }
 
 #content table th,
